--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.1",
+    "css-loader": "^0.23.1",
     "express": "^4.15.2",
+    "foundation-sites": "^6.2.0",
+    "jquery": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "script-loader": "^0.6.1",
+    "style-loader": "^0.13.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
