--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.24.1",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
     "webpack": "^1.12.13"
   }
 }
